# MaiCra

./: CMakeLists.txt  gameSettings.cpp  gameSettings.h  glad.c  glad.h  main.cpp
Camera/: Camera.cpp  Camera.h
Chunk/: Chunk.h
Chunk/Mesh/: Mesh.cpp  Mesh.h  Texture.cpp  Texture.h  Vertex.cpp  Vertex.h
Control/: Control.cpp  Control.h
Cube/: Cube.cpp  Cube.h
Game/: Game.cpp  Game.h
MapLoader/: MapLoader.cpp  MapLoader.h
OpenCLErrorCodesChecker/: OpenCLErrorCodesChecker.cpp  OpenCLErrorCodesChecker.h
Renderer/: Renderer.cpp  Renderer.h
Resources/cubes/: cubeTypes.cpp  cubeTypes.h
Resources/textures/: textureTypes.cpp  textureTypes.h
Shader/: ShaderLoader.cpp  ShaderLoader.h  debugDepthQuad.frag  rtsShader.frag  rtsShader.vert  shadowMappingDepth.frag  shadowMappingDepth.vert
TextureLoader/: TextureLoader.cpp  TextureLoader.h
Textures/: Texture.cpp  Texture.h
Window/: Window.cpp  Window.h
libs/glad/: glad.c
